--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -6,20 +6,21 @@
 # ß
 # If the above line is not correctly displayed, fix your editor first!
 
-general {
-        colors = true
-        interval = 5
-        color_good = "#859900"
-        color_bad = "#dc322f"
-        color_degraded = "#cb4b16"
-}
+# general {
+#         colors = true
+#         interval = 5
+#         color_good = "#859900"
+#         color_bad = "#dc322f"
+#         color_degraded = "#cb4b16"
+# }
+
 
 #order += "ipv6"
 order += "disk /"
-order += "wireless _first_"
+#order += "wireless _first_"
 #order += "ethernet _first_"
 order += "volume master"
-order += "battery all"
+#order += "battery all"
 order += "load"
 order += "tztime local"
 
@@ -55,3 +56,4 @@ volume master {
         mixer = "Master"
         format = "Vol: %volume"
         format_muted = "Vol: %volume (muted)"
+
