--- a/.config/i3/config
+++ b/.config/i3/config
@@ -164,13 +164,14 @@ bindsym XF86AudioMute exec --no-startup-id amixer -q set Master toggle
 
 # Set all window borders
 new_window pixel 1
+new_float pixel 2
 
 # úprava barevného schématu
 client.focused      #006aff #285577 #ffffff #00e9ff #285577
 client.unfocused    #333333 #222222 #888888 #292d2e #222222
 
 # Focus follows mouse
-focus_follows_mouse no
+focus_follows_mouse yes
 
 # spouštění programů klávesovými zkratkami
 bindsym $mod+Shift+f exec firefox
