switch to i3status

--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -6,23 +6,30 @@
 # ß
 # If the above line is not correctly displayed, fix your editor first!
 
-# general {
-#         colors = true
-#         interval = 5
-#         color_good = "#859900"
-#         color_bad = "#dc322f"
-#         color_degraded = "#cb4b16"
-# }
+general {
+        colors = true
+        interval = 1
+        color_good = "#00ff00"
+        color_bad = "#ff0000"
+        color_degraded = "#c08000"
+        color_separator = "#ffffff"
+}
 
 
+order += "volume master"
 #order += "ipv6"
 order += "disk /"
+order += "disk /home"
 #order += "wireless _first_"
 #order += "ethernet _first_"
-order += "volume master"
 #order += "battery all"
+order += "cpu_temperature 0"
 order += "load"
 order += "tztime local"
+
+cpu_temperature 0 {
+        format = "%degrees °C"
+}
 
 wireless _first_ {
         format_up = "W: %quality at %essid"
@@ -48,7 +55,11 @@ load {
 }
 
 disk "/" {
-        format = "%avail"
+        format = "/: %avail"
+}
+
+disk "/home" {
+        format = "~/: %avail"
 }
 
 volume master {
